[package]
name = "vertaxio-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.14"
getch = "0.3.1"
serde = "1.0.228"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
windows = { version = "0.62.2", features = ["Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D11", "Win32_Foundation", "Win32_System_Com", "Win32_Graphics_Direct3D", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse"] }
